--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "circular-json": "0.5.3",
     "express": "4.16.3",
     "i18n": "0.8.3",
+    "jsonwebtoken": "8.2.1",
     "mongoose": "5.0.15",
     "morgan": "1.9.0",
     "winston": "2.4.1"
