--- a/server_employee/front/package.json
+++ b/server_employee/front/package.json
@@ -25,16 +25,19 @@
         "vue-material": "1.0.0-beta-7",
         "vue-notifyjs": "0.1.7",
         "vue-router": "2.2.0",
+        "vue2-editor": "2.4.3",
         "vuex": "3.0.1"
     },
     "devDependencies": {
         "autoprefixer": "^6.7.2",
-        "babel-core": "^6.22.1",
+        "babel-core": "6.26.0",
         "babel-eslint": "^7.2.3",
-        "babel-loader": "^6.2.10",
+        "babel-loader": "6.4.1",
         "babel-plugin-istanbul": "^3.1.2",
         "babel-plugin-transform-runtime": "^6.22.0",
-        "babel-preset-es2015": "^6.22.0",
+        "babel-polyfill": "6.26.0",
+        "babel-preset-es2015": "6.24.1",
+        "babel-preset-stage-0": "6.24.1",
         "babel-preset-stage-2": "^6.22.0",
         "babel-register": "^6.22.0",
         "chai": "^3.5.0",
