--- a/server_employee/front/package.json
+++ b/server_employee/front/package.json
@@ -17,7 +17,7 @@
         "bootstrap-material-design": "0.5.10",
         "chartist": "0.10.1",
         "jquery": "3.2.1",
-        "jsonwebtoken": "^8.2.1",
+        "jsonwebtoken": "8.2.1",
         "update": "0.7.4",
         "vue": "2.5.16",
         "vue-clickaway": "2.1.0",
