--- a/server_employee/front/.eslintrc.json
+++ b/server_employee/front/.eslintrc.json
@@ -14,6 +14,7 @@
       "sourceType": "module"
     },
     "rules": {
+        "no-extend-native" : 0,
         "no-debugger": 0,
         "padded-blocks": 0,
         "no-multiple-empty-lines": "warn",
