--- a/server_employee/front/.eslintrc.json
+++ b/server_employee/front/.eslintrc.json
@@ -20,7 +20,7 @@
         "no-multiple-empty-lines": "warn",
         "no-const-assign": "warn",
         "no-this-before-super": "warn",
-        "no-trailing-spaces " : 0,
+        "no-trailing-spaces" : 0,
         "no-undef": "warn",
         "no-unreachable": "warn",
         "no-unused-vars": "warn",
@@ -28,6 +28,7 @@
         "comma-dangle": 0,
         "key-spacing": 0,
         "spaced-comment": 0,
+        "space-in-parens" : 0,
         "quotes" : "warn",
         "semi": 0,
         "indent": 0,
