--- a/server_employee/front/.eslintrc.json
+++ b/server_employee/front/.eslintrc.json
@@ -18,6 +18,7 @@
         "no-debugger": 0,
         "padded-blocks": 0,
         "no-multiple-empty-lines": "warn",
+        "no-multi-spaces" : 0,
         "no-const-assign": "warn",
         "no-this-before-super": "warn",
         "no-trailing-spaces" : 0,
