Ready update news active.

--- a/server_employee/front/.eslintrc.json
+++ b/server_employee/front/.eslintrc.json
@@ -14,6 +14,7 @@
       "sourceType": "module"
     },
     "rules": {
+        "camelcase" : 0,
         "no-tabs" : 0,
         "no-mixed-spaces-and-tabs" : 0,
         "no-extend-native" : 0,
