--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jsonwebtoken": "8.2.1",
     "mongoose": "5.0.15",
     "morgan": "1.9.0",
+    "nodemailer": "^4.6.4",
     "winston": "2.4.1",
     "wkhtmltopdf": "0.3.4"
   }
