--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose": "5.0.15",
     "morgan": "1.9.0",
     "nodemailer": "^4.6.4",
+    "truncate-html": "1.0.0",
     "winston": "2.4.1",
     "wkhtmltopdf": "0.3.4"
   }
