Add change langs.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "circular-json": "0.5.3",
+    "cookie-parser": "1.4.3",
     "ejs-locals": "1.0.2",
     "express": "4.16.3",
     "i18n": "0.8.3",
