--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "cms for new service",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "client-app-watch": "./node_modules/.bin/webpack --watch",
+    "client-app-build": "./node_modules/.bin/webpack"
   },
   "repository": {
     "type": "git",
@@ -23,9 +25,20 @@
   },
   "homepage": "https://github.com/eagle7410/node_news_cms#readme",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-minify-webpack-plugin": "0.3.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "6.26.0",
     "cors": "2.8.4",
     "mocha": "5.1.1",
-    "moment": "2.22.1"
+    "moment": "2.22.1",
+    "path": "^0.12.7",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.1.2",
+    "webpack-sources": "1.1.0"
   },
   "dependencies": {
     "circular-json": "0.5.3",
