--- a/package.json
+++ b/package.json
@@ -34,14 +34,21 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "6.26.0",
     "cors": "2.8.4",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "mocha": "5.1.1",
     "moment": "2.22.1",
+    "node-sass": "^4.9.0",
     "path": "^0.12.7",
-    "webpack": "^4.6.0",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.7.0",
     "webpack-cli": "^2.1.2",
     "webpack-sources": "1.1.0"
   },
   "dependencies": {
+    "bootstrap": "^4.1.1",
     "circular-json": "0.5.3",
     "cookie-parser": "1.4.3",
     "ejs-locals": "1.0.2",
