--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "client-app-watch": "./node_modules/.bin/webpack --watch",
-    "client-app-build": "./node_modules/.bin/webpack"
+    "client-app-build": "./node_modules/.bin/webpack",
+    "pm-start" : "pm2 start processes.json",
+    "pm-stop" : "pm2 stop processes.json",
+    "pm-reload" : "pm2 reload processes.json"
   },
   "repository": {
     "type": "git",
