--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "client-app-watch": "./node_modules/.bin/webpack --watch",
     "client-app-build": "./node_modules/.bin/webpack",
-    "pm-start" : "pm2 start processes.json",
-    "pm-stop" : "pm2 stop processes.json",
-    "pm-reload" : "pm2 reload processes.json"
+    "pm-start": "pm2 start processes.json",
+    "pm-stop": "pm2 stop processes.json",
+    "pm-reload": "pm2 reload processes.json"
   },
   "repository": {
     "type": "git",
@@ -61,7 +61,11 @@
     "jsonwebtoken": "8.2.1",
     "mongoose": "5.0.15",
     "morgan": "1.9.0",
+    "mysql2": "1.5.3",
     "nodemailer": "^4.6.4",
+    "pg": "7.4.3",
+    "pg-hstore": "2.3.2",
+    "sequelize": "4.37.7",
     "truncate-html": "1.0.0",
     "winston": "2.4.1",
     "wkhtmltopdf": "0.3.4"
