--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
     "babel-loader": "^7.1.4",
     "babel-minify-webpack-plugin": "0.3.1",
     "babel-polyfill": "6.26.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "6.26.0",
+    "console-color": "https://github.com/eagle7410/console-color",
+    "console-prompt-eagle": "^1.0.0",
     "cors": "2.8.4",
     "css-loader": "^0.28.11",
-    "directory-tree": "2.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "mocha": "5.1.1",
@@ -51,11 +52,9 @@
     "path": "^0.12.7",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
-    "webpack": "^4.7.0",
-    "webpack-cli": "^2.1.2",
-    "webpack-sources": "1.1.0",
-    "shell": "1.0.3",
-    "console-prompt-eagle": "^1.0.0"
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3",
+    "webpack-sources": "1.1.0"
   },
   "dependencies": {
     "bootstrap": "^4.1.1",
