--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,10 @@
 ### Node template
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 .git
+package-lock.json
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
