--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "console-prompt-eagle": "1.0.1",
     "cors": "2.8.4",
     "css-loader": "^0.28.11",
+    "ejs-lint": "^0.3.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
     "mocha": "5.1.1",
@@ -61,7 +62,7 @@
     "circular-json": "0.5.3",
     "cli-spinner": "0.2.8",
     "cookie-parser": "1.4.3",
-    "ejs-locals": "^1.0.2",
+    "ejs": "2.6.1",
     "express": "4.16.3",
     "i18n": "0.8.3",
     "json2xls": "0.1.2",
