--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node_news_cms",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "cms for news service",
   "main": "index.js",
   "scripts": {
@@ -14,7 +14,7 @@
     "pm-reload": "pm2 reload ./server_employee/processes.json && pm2 reload ./server_clients/processes.json",
     "image-clients": "docker build -t node_cms_new_clients . --file ./DockerfileClients",
     "container-clients": "docker run --name node_cms_new_clients1 -p 3539:3539 --link mysql:mysql -d node_cms_new_clients",
-    "postinstall": "node ./scripts/install.js"
+    "postinstall": "npm i && node ./scripts/install.js"
   },
   "repository": {
     "type": "git",
